name:                bindings-hpx
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/iu-parfunc/bindings-hpx
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
copyright:           (C) Ryan Scott
category:            Parallelism
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/iu-parfunc/bindings-hpx

library
  exposed-modules:     Bindings.HPX
  build-depends:       base >= 4.3 && < 5
                     , bindings-DSL
                     , bindings-libffi
  if os(linux)
    build-depends:     clock >= 0.5 && < 0.7
  build-tools:         hsc2hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  pkgconfig-depends:   hpx >= 2.2
  c-sources:           cbits/wr_hpx.c
  include-dirs:        include
  includes:            wr_hpx.h
